tests/NormalTests/paczka1/small_fuzzy/61478127.err
Error in line 5: 1P5K5W A518 8,8
Error in line 3: 5tOMOCi A518 7,9
Error in line 6: XR1z5ntT A513 84,3
Error in line 4: jY1daQMg0m A513 95,0
